--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,11 @@
+Version 0.4.0
+2018-10-31
+- #36 Added "proxies" argument to _HTTPConnection.
+- Created documentation and host on ReadTheDocs.
+- #35 Handle invalid content better.
+- #39 Added "_raw" to provide access to raw TAXII Responses.
+- #40 Allow users to specify the user agent.
+
 Version 0.3.1
 2018-04-12
 - Fix packaging problem
