--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,14 @@
+Version 1.0.1
+2020-04-01
+- Fix packaging problem
+- #60, #23 Pagination generator function available ``as_pages`` for get_objects and get_manifest requests
+
+Version 1.0.0
+2020-04-01
+Base release of the TAXII Client for 2.0. Unsupported features:
+- TLS support in requests
+- Force connection initiation using HTTPS
+
 Version 0.5.0
 2018-11-09
 - #50 Fix an issue regarding trailing slash being missing in the Endpoint url
