--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,12 @@
+Version 2.0.0
+2020-04-01
+Base release of the TAXII Client for 2.1. Unsupported features:
+- TLS support in requests
+- Force connection initiation using HTTPS
+Note
+`import taxii2client` by default will load TAXII 2.1 classes. If this is not desired use `from taxii2client import v20`
+or `from taxii2client.v20 import <class>`
+
 Version 1.0.1
 2020-04-01
 - Fix packaging problem
