--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Version 2.2.0
+2020-07-02
+- #76 drop python versions older than 3.5
+- #75 fixes construction of Range Header for paginated requests RFC 7233. (@dougle)
+
 Version 2.1.0
 2020-06-09
 - #68 Support for user-specified authentication including token-based authentication.
