--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,9 @@
+Version 2.2.2
+2020-09-10
+- #85 Provide more details when a Server Response status code is 406. (v20, v21)
+- #84 Fallback "Range" HTTP Header for pagination requests. (@teizenman) (v20)
+- #81 More flexibility for the Status Endpoint validation. It no longer fails for optional successes, pendings, failures lists (@maybe-sybr) (v20, v21)
+
 Version 2.2.1
 2020-07-17
 - #78 Prevent KeyError when TAXII Server Response does not include 'Content-Range' Header (v20)
